<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/blue"
        android:text="@string/label_update" />

    <TextView
        android:id="@+id/dialog_update_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="版本：2016-1-29"
        android:lineSpacingExtra="3dp"
        android:textColor="@color/text_dark_gray"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_update_cancel"
            android:text="@string/cancel"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_update_ok"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ok"
            android:textSize="14sp"
            android:textColor="@drawable/selector_ok_text" />
    </LinearLayout>
</LinearLayout>